<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" android:focusable="true" android:background="#4cff90">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
        android:id="@+id/hash"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_message"
            android:id="@+id/fileChoose" android:layout_above="@+id/hash" android:layout_centerHorizontal="true"
            android:longClickable="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputField" android:layout_below="@+id/hash" android:layout_alignLeft="@+id/hash"
            android:layout_alignRight="@+id/hash" android:hint="@string/hint" android:textSize="14sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_text"
        android:id="@+id/compareButton"
        android:layout_below="@+id/inputField"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_result"
        android:id="@+id/matchStatus"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/compareButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Copy to Clipboard"
        android:id="@+id/clipboardButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_message"
        android:id="@+id/exitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
